2007-10-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix a problem to compile with a
	   third-party x86_64 rpm package. '--with-instant-client'
	   option become obsolete and is ignored.

2007-10-11  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: add DatabaseHandle#columns for DBI.
	    (suggested by Venkat Pa)

2007-10-11  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: fix external OS authentication.
	    I applied Dan Fitch's patch to improper location.

2007-07-24  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c, lib/oci8/object.rb: support binary_double,
	   binary_float and object member of object datatype.
	* test/setup_test_object.sql, test/test_object.rb: add testcase for
	   binary_double, binary_float, embedded object, array of raw, array
	   of binary_double, array of binary_float, array of object in object
	   datatype.

2007-07-07  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c: support array of number in OCI8::NamedCollection.
	* test/setup_test_object.sql, test/test_object.rb: fix a testcase
	    to test array of number.

2007-07-05  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/object.rb, ext/oci8/object.c: add OCI8::NamedCollection
	    to support collection datatypes. add OCI8::NamedType#attributes
	    and #attributes= instead of OCI8::NamedType#copy_attributes_from
	    and #copy_attributes_to. and others.
	* lib/oci8/oci8.rb: add OCI8#username.
	* test/test_object.rb: add a testcase for array of varchar2.

2007-07-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c, lib/oci8/object.rb, lib/oci8/oci8.rb:
	   delete OCI8::NamedType module and OCI8::NamedType::Base class
	   and add OCI8::Object module, OCI8::Object::Base class and 
	   OCI8::NamedType class. In the user view, OCI8::NamedType::Base
	   become OCI8::Object::Base. The reason is that 'named type' is used
	   only by OCI documents, and Other Oracle manuals use Oracle Object.