@@ -2,6 +2,8 @@
 	* ext/oci8/oraconf.rb: fix a problem to compile with a
 	   third-party x86_64 rpm package. '--with-instant-client'
 	   option become obsolete and is ignored.
+	* ext/oci8/oraconf.rb: fix for FreeBSD oracle8-client port.
+	   Not all tests are passed on FreeBSD yet.
 
 2007-10-11  KUBO Takehiro  <kubo@jiubao.org>
 	* lib/DBD/OCI8/OCI8.rb: add DatabaseHandle#columns for DBI.
